# pyfgtconflib

./: .gitignore  README.md  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
src/pyfgtconflib/: __init__.py  pyfgtconflib.py
tests/: device_FG3601E_factory_default_settings.txt  import_export.py  remove_password.py
