[metadata]
name = pyfgtconflib
version = 0.0.1
author = Don Yao
author_email = dyao@fortinet.com
description = Python FortiGate Config Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fortinetps/pyfgtconflib
project_urls =
    Bug Tracker = https://github.com/fortinetps/pyfgtconflib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src